Scheduling improvements
There was a problem with the scheduling that causes the actual timeslice
for a single task to be way too high.

More documentation and more testing.